--- a/style.css
+++ b/style.css
@@ -3,14 +3,16 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
 }
 
 .header {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-around;
     width: 400px;
-    margin-bottom: 20px;
+    margin: 20px;
 }
 
 .footer{
